registro-alumno/Code refactoring

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ezemartino.github.io/TP-LABIII",
+  "homepage": "",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
